--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,33 @@
-# Build and Release Folders
-bin-debug/
-bin-release/
-[Oo]bj/
-[Bb]in/
+# Compiled class file
+*.class
 
-# Other files and folders
-.settings/
+# Log file
+*.log
 
-# Executables
-*.swf
-*.air
-*.ipa
-*.apk
+# BlueJ files
+*.ctxt
 
-# Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
-# should NOT be excluded as they contain compiler settings and other important
-# information for Eclipse / Flash Builder.
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+/build/**
+/out/**
+/target/**
+# Package Files #
+*.jar
+*.war
+*.ear
+*.zip
+*.tar.gz
+*.rar
+**/out
+**/target
+**/build
+**/classes
+**/META-INF
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+/.idea/**
+/.gradle/**
+build/**
+*.*.gz
