--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 # --------------------------------------------------------------------------------------------------------------
 # app configurations
 # --------------------------------------------------------------------------------------------------------------
-app: blockchain-monitor
+app: blockexplorer
 project: api
 phase: ${spring.profiles.active}
 spring:
