--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.6"
 services:
   blockchain_monitor:
     build: "api/"
-    image: "hongsgo/blockchain-monitor:latest"
+    image: "hongsgo/blockexplorer:latest"
     ports:
       - "8080:8080"
     container_name: "blockchain_monitor"
