--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -7,8 +7,17 @@ RUN apk add --update \
     curl \
     git \
     && rm -rf /var/cache/apk/*
-
-EXPOSE 8080
+ENV springprofiles=""
 COPY /build/libs/api-0.0.1-SNAPSHOT.jar api.jar
 COPY ./docker/scripts/wait-for-it.sh wait-for-it.sh
-ENTRYPOINT ["java", "-jar", "api.jar"]
+
+ENV springprofiles="" \
+    MAXRAMIFNOLIMIT=4096
+
+ENTRYPOINT MAXRAM=$(expr `cat /sys/fs/cgroup/memory/memory.limit_in_bytes` / 1024 / 1024) && \
+           MAXRAM=$(($MAXRAM>$MAXRAMIFNOLIMIT?$MAXRAMIFNOLIMIT:$MAXRAM))m && \
+           echo "MaxRam: $MAXRAM" && \
+           java -XX:MaxRAM=$MAXRAM -Djava.security.egd=file:/dev/./urandom -jar -Dspring.profiles.active="$springprofiles" api.jar
+EXPOSE 8080
+#https://gist.github.com/kekru/e7414a9a689038b1153c48d9b2e30edf
+#ENTRYPOINT ["java", "-jar", "api.jar"]
